@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

'title Domain Model

'class Platform {
'  -description
'}
abstract class Person {
    name
    passportCardNumber
    taxNumber
    emailAddress
    phoneNumber


}
class Store {
    ID
    designation
    phoneNumber
    emailAddress
    }

class Address {
     streetName
     cityName
     zipCode
     district
    }

abstract class Employee {
}
class "SystemAdministrator" as Administrator {

}

class OrganizationRole {
    agent
    storeManager
    storeNetworkManager

}


Employee <|-- OrganizationRole

Person <|-- Employee
Store "1" - "1" Address : located at >

Administrator "1" - "1..*" Employee : registers >
Administrator "1" -- "1..*" Store : registers  >
Employee "1" -- "1" Address : located at >






@enduml